Fix double bordering in curbid cell

--- a/ntpass/css/system.css
+++ b/ntpass/css/system.css
@@ -300,10 +300,14 @@
 }
 
 #curbid-name .bid {
-	border: 1px solid;
+	border: 1px solid black;
 	border-radius: 3px;
 	height: 30px;
 	margin: auto;
+}
+
+#curbid-name .bid .bid {
+	border: none;
 }
 
 #curbid-name .seat {
